--- a/style.css
+++ b/style.css
@@ -8,40 +8,92 @@ a {
 }
 
 #container {
-	background-color: #bcb5a0;
+	
 	width: 1000px;
 	height: 1000px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 185px;
+	margin-right: 185px;
 
 }
 
 #header {
-	background-color: #bab6ad;
-	padding: 10px;
 }
 
 #nav {
-text-align: center;
-background-color: #bca182;
-font-size: 15;
+	text-align: center;
+	font-size: 15;
+}
+
+.menu {
+	background: #202024 url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/black-thread.png') repeat left top;
+  left: -285;  /* start off behind the scenes */
+  bottom: 1000;
+  min-height: 100%;
+  position: fixed;
+  width: 285px;
+  font-size: 50;
+}
+
+.icon-close {
+	width: 50px;
+    height: 50px;
+}
+
+.icon-close img{
+	
+	 width: 100%;
+    height: 100%;
+	
+}
+
+.jumbotron {
+	background-image: url('bg3.jpeg');
+	background-size: cover;
+
+  min-height: 100%;
+  min-width: 1024px;
+  
+  width: 100%;
+  height: auto;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  
+
+}
+
+.icon-menu {
+	text-align: left;
+	font-size: 50;
+	color: white;
+	margin-left: 10px;
+}
+
+.icon-menu a {
+	text-align: left;
+	font-size: 50;
+	color: white;
+	
 }
 
 #nav .selected {
 font-weight: bold;
 }
 
-#content {
+.content {
 padding: 10px;
 }
 
-#profile {
+/*.profile {
 width: 550px;
 float: left;
 padding: 0px 20px 0px 0px;
-}
+}*/
 
-#image {
+.image {
+	position: relative;
+right: 10px;
 width: 400px;
 float: right;
 }
