--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ a {
   font-size: 50;
 }
 
+.menu ul li {
+	color: white;
+}
+
+.menu ul li a {
+	color: white;
+}
+
 .icon-close {
 	width: 50px;
     height: 50px;
@@ -47,7 +55,7 @@ a {
 }
 
 .jumbotron {
-	background-image: url('bg3.jpeg');
+	background-image: url('https://github.com/marioneo1/Website/blob/marioneo1-patch-1/bg3.jpeg?raw=true');
 	background-size: cover;
 
   min-height: 100%;
@@ -98,13 +106,18 @@ width: 400px;
 float: right;
 }
 
+/*
 #survey {
 clear: both;
 float: right;
 padding: 10px 10px 0px 0px
-}
+}*/
 
-#footer {
-padding: 10px;
-clear: both;
+.footer {
+    position: fixed;   
+	text-align: right;
+    bottom: 0px; 
+	color: white;
+	width: 98%;
+	margin-left: 1%;
 }
